--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         //     alert(x,y,"one-time view messages can't be frwd")
         // } -->
     <!-- </script> -->
-    <script>
-      // let x = Boolean(+prompt("send the message"));
+    <!-- <script> -->
+      <!-- // let x = Boolean(+prompt("send the message"));
       // // y = Boolean(x);
       // // console.log(y);
       // if (x){
@@ -34,8 +34,8 @@
       // else {
       //     alert("u can frwd the message");
       // }
-    
-    </script>
+     -->
+    <!-- </script> -->
   </body>
 </html>
 ()
