practised few ques

--- a/index1.html
+++ b/index1.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-    //  let x = prompt("Enter");
+    <!-- <script> -->
+    <!-- //  let x = prompt("Enter");
       // if (x == 90) {
       //   alert("it is a ri8 angled triangle");
       //   console.log("it is a ri8 angled triangle");
@@ -93,6 +93,6 @@
 //   alert("the sign is - ")
 // }
 
-    </script>
+    </script> -->
   </body>
 </html>
