--- a/index1.html
+++ b/index1.html
@@ -94,5 +94,17 @@
 // }
 
     </script> -->
+    <script>
+      // debugger;
+      // for (i = 0; i <= 5; i++) {
+      //   console.log(i);
+      //   alert(i)
+      // }
+      for(i=1,j=11;i<=10 && j<=20;i--,j=j+3){
+        console.log(i,j)
+        // i =i+1
+      }
+    </script>
+    
   </body>
 </html>
