--- a/index.html
+++ b/index.html
@@ -1,41 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-  <body>
-    <!-- <script>
-        let x = 5;
-        let y = 10;
-        let z = x + y;
-        alert(z,"");
-        let a = +prompt("enter a value");
-        let b = -prompt("enter another value");
-        let c = a + b;
-        console.log(c, typeof c);
+</head>
+<body>
+    <script>
+        let mydiv= document.createElement("div")
+        mydiv.style.height="120px"
+        mydiv.style.width="200px"
+        mydiv.style.border="2px solid red"
+        mydiv.style.marginLeft="100px"
+        let x=document.createElement("h2")
+        x.innerHTML="hello"
+        x.style.textAlign="center"
+        mydiv.append(x)
+        document.body.append(mydiv)
         
-    </script> -->
-    <!-- <script> -->
-    <!-- // let x = true
-        // let y = false
-        // if (x){
-        //     alert(x,y,"one-time view messages can't be frwd")
-        // } -->
-    <!-- </script> -->
-    <!-- <script> -->
-      <!-- // let x = Boolean(+prompt("send the message"));
-      // // y = Boolean(x);
-      // // console.log(y);
-      // if (x){
-      //     alert("u cant frwd the message");
-      // }
-      // else {
-      //     alert("u can frwd the message");
-      // }
-     -->
-    <!-- </script> -->
-  </body>
+    </script>
+</body>
 </html>
-()
