--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
+    <!-- <script>
         let mydiv= document.createElement("div")
         mydiv.style.height="120px"
         mydiv.style.width="200px"
@@ -17,7 +17,20 @@
         x.style.textAlign="center"
         mydiv.append(x)
         document.body.append(mydiv)
-        
-    </script>
+         -->
+    <!-- </script> -->
+     <form id="myform">
+        <input type="file" name="" id="id1"><br><br>
+        <input type="submit">
+     </form>
+     <p id="p1"></p>
+     <script>
+        let form=document.getElementById("myform")
+        form.addEventListener("submit",(e)=>{
+            e.preventDefault()
+            let p1=document.getElementById("p1")
+            let 
+        })
+     </script>
 </body>
 </html>
