--- a/dom/index.html
+++ b/dom/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Div with Image and Text</title>
+    <title></title>
 </head>
 <body>
 
