--- a/project/weather.html
+++ b/project/weather.html
@@ -8,6 +8,9 @@
       .container{
        /* border: 2px solid ;  */
        height: 400px;
+       position: relative;
+       top: 150px;
+       left: 450px;
        width:400px;
        border-radius: 20px;
        background-image: url(../project/assets/giphy.webp);
@@ -17,7 +20,7 @@
         position: relative;
         top: 20px;
         margin-left: 80px;
-        color: rgb(235, 239, 243);
+        /* color: rgb(235, 239, 243); */
       }
       #city{
         height: 30px;
